--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-contacts.dat
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -134,3 +132,4 @@ dmypy.json
 .DS_Store
 test/
 contacts.dat
+notebook.dat
